--- a/app/src/main/res/layout/activity_missing_person_details.xml
+++ b/app/src/main/res/layout/activity_missing_person_details.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="16dp">
+
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -123,3 +129,17 @@
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
+
+    <!-- Кнопка сохранения -->
+<com.google.android.material.floatingactionbutton.FloatingActionButton
+android:id="@+id/saveButton"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:layout_alignParentEnd="true"
+android:layout_alignParentBottom="true"
+android:layout_margin="16dp"
+android:contentDescription="Сохранить информацию"
+android:src="@drawable/ic_save"
+android:tint="@android:color/white" />
+
+    </RelativeLayout>
