--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#BBBBBB</color>
     <color name="chipBackground">#D3D3D3</color>
+    <color name="card_background">#1E1E1E</color>
+    <color name="card_stroke">#424242</color>
 </resources>
